# gg

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: bash.rs  cli.rs  env.rs  fish.rs  getgit.rs  help.rs  main.rs  setup.rs  shell.rs  zsh.rs
tests/: cli.rs  integration.sh
